--- a/src/app/pages/work-view/work-view-page.component.scss
+++ b/src/app/pages/work-view/work-view-page.component.scss
@@ -172,6 +172,7 @@ h2 {
 
 .today,
 .backlog .inner-wrapper {
+  overflow-x: hidden;
   @include scrollYImportant();
 }
 
